# fem

./: Cargo.toml  Dockerfile  README.md
data/: beam.mesh  beam.res  body.json  body.mesh  body.res  body1d.mesh  body1d.res  console.mesh  console.res  cube.mesh  cube.res  shell-tube-3.mesh  shell-tube-3.res  tank.json  tank.mesh  tank.res  tank_1_4.mesh  tank_1_4.res  test_3d_8.json  test_beam.json  test_shell.json
src/: lib.rs  main.rs
src/core/: error.rs  fe.rs  fem.rs  mesh.rs  msg.rs  parser.rs  solver.rs  sparse.rs  util.rs
src/fem/: bccs.rs  error.rs  fe.rs  fem.rs  json.rs  mesh.rs  mod.rs  msg.rs  param.rs  parser.rs  russell.rs  solver.rs  sparse.rs  util.rs
src/json/: mod.rs
