[package]
name = "fem"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"
bitflags = "*"
chrono = "*" 
rayon = "*"
json = "*"
[target.'cfg(not(target_os = "windows"))'.dependencies]
russell_lab = "*"
russell_sparse = "*"


